# covjsonkit

./: .gitignore  .pre-commit-config.yaml  ACKNOWLEDGEMENTS.rst  MANIFEST.in  Makefile  README.md  ensemble-timeseries.req  example_config.json  pyproject.toml  readme.md  requirements.txt  setup.py  tox.ini
covjson/: Coverage.py  CoverageCollection.py
covjsonkit/: __init__.py  api.py  config.py  param_db.py  utils.py
eccovjson/: Coverage.py  CoverageCollection.py  __init__.py  api.py  param_db.py
scripts/: generate_param_db.py
tests/: conftest.py  geojsontest.py  requirements.txt  requirements_test.txt  test_decoder.py  test_decoder_bounding_box.py  test_decoder_circle.py  test_decoder_frame.py  test_decoder_grid.py  test_decoder_position.py  test_decoder_shapefile.py  test_decoder_time_series.py  test_decoder_vertical_profile.py  test_decoder_wkt.py  test_encoder.py  test_encoder_bounding_box.py  test_encoder_bounding_box_from_polytope.py  test_encoder_circle_from_polytope.py  test_encoder_frame.py  test_encoder_frame_from_polytope.py  test_encoder_grid.py  test_encoder_grid_from_polytope.py  test_encoder_path.py  test_encoder_path_from_polytope.py  test_encoder_position_from_polytope.py  test_encoder_shapefile.py  test_encoder_shapefile_from_polytope.py  test_encoder_time_series.py  test_encoder_time_series_from_polytope.py  test_encoder_vertical_profile_from_polytope.py  test_encoder_wkt.py  test_encoder_wkt_from_polytope.py  test_geojson.py  test_geotiff.py  test_timeseries_from_polytope.py  test_util_merge.py  test_xarray_multipoint.py  test_xarray_path.py  (+2 more)
(+63 files in other folders)
