[tool.black]
line-length = 120
[build-system]
requires = ["setuptools>=61.0","setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"
[tool.pytest.ini_options]
markers = ["data: uses test data (deselect with '-m \"not data\"')",]

[project]
name = "covjsonkit"
version = "0.2.9"
dependencies = [
    "pandas<3",
    "orjson",
    "xarray",
    "covjson-pydantic",
    "conflator",
    "scipy",
]

[project.optional-dependencies]
geo = [
    "rasterio",
    "shapely",
]
